--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,4 @@ flask==3.0.3
 pybit==0.6.0
 python-dotenv==1.0.1
 streamlit==1.36.0
-beautifulsoup4==4.12.3
-cloudscraper==1.2.71
-requests==2.32.3
+gunicorn
