--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
+# Python virtual environment
+venv/
+.venv/
 env/
-.env
+
 __pycache__/
 *.pyc
-.vscode/
-.DS_Store
-시장가주문.py
-잔고조회.py
-연습코드.py
+
+# Environment variables (critical for security, DO NOT commit!)
+.env
+
+# Logs
+*.log
